# nojohns

./: .gitignore  CLAUDE.md  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json
.github/workflows/: release.yml
docs/: PLAN.md
docs/redesign/: brief.md  design-prompt.md
engine/: engine_entry.py  nojohns-engine.spec  pyproject.toml
engine/nojohns_engine/: __init__.py  cli.py  coach.py  doctor.py  events.py  fetch.py  game_review.py  paths.py  rebaseline.py  session_review.py  set_review.py
engine/nojohns_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: coach-system.md
scripts/: build-engine.ps1
src/main/: config.ts  engine.ts  index.ts  playback.ts  slippi-detect.ts
src/main/coach/: advise.test.ts  cli.ts  client.ts
src/main/notes/: format.ts  merge.ts  notes.test.ts  render.ts  write.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  characters.ts  metrics.ts
src/renderer/src/assets/: app.css  main.css  tokens.css
src/renderer/src/views/: Coach.tsx  Dashboard.tsx  Matchups.tsx  Onboarding.tsx  ProReplays.tsx  SessionReport.tsx  Settings.tsx
